<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/inputText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:text="@string/textoSum"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/outPutText"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:text="@string/textoSum2"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/outPutIntegerValue"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:text="@string/textoData"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/outPutTextPar"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:text="@string/textoString"
            android:textColor="@android:color/black" />
    </LinearLayout>
    
        <TextView
            android:id="@+id/outPutArray"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:text="@string/ArrayTexto"
            android:textColor="@android:color/black" />

</LinearLayout>